   not lowercasing the key before checking for the tag (Adriano Crestani)

======================= Lucene 3.6.0 ================

(No Changes)

Bug Fixes

 * LUCENE-3600: BlockJoinQuery now supports parent docs that have no
   children (such docs will never match, but BJQ was tripping an
   assert if such a parent doc was the first doc in the segment).
   (Shay Banon, Mike McCandless)

======================= Lucene 3.5.0 ================

Changes in backwards compatibility policy

 * LUCENE-3446: Removed BooleanFilter.finalResult() due to change to
   FixedBitSet.  (Uwe Schindler)

 * LUCENE-3508: Changed some method signatures in decompounding TokenFilters
   to make them no longer use the Token class.  (Uwe Schindler)
   
 * LUCENE-3557: The various SpellChecker.indexDictionary methods were removed,
   and consolidated to one:

   indexDictionary(Dictionary dict, IndexWriterConfig config, boolean optimize)
   
   Previously, there was no way to specify an IndexWriterConfig, and some
   of these methods would sneakily pass 'true' to optimize.  (Robert Muir)
   
 * LUCENE-3558: Moved NRTManager & NRTManagerReopenThread into lucene core 
   o.a.l.search. (Simon Willnauer)
   
 * LUCENE-2564: WordListLoader is now flaged as @lucene.internal. All methods in
   WordListLoader now return CharArraySet/Map and expect Reader instances for 
   efficiency. Utilities to open Readers from Files, InputStreams or Java 
   resources were added to IOUtils. (Simon Willnauer, Robert Muir)

New Features

 * LUCENE-1824: Add BoundaryScanner interface and its implementation classes,
   SimpleBoundaryScanner and BreakIteratorBoundaryScanner, so that FVH's FragmentsBuilder
   can find "natural" boundary to make snippets. (Robert Muir, Koji Sekiguchi)

 * LUCENE-1889: Add MultiTermQuery support for FVH. (Mike Sokolov via Koji Sekiguchi)

 * LUCENE-3458: Change BooleanFilter to have only a single clauses ArrayList
   (so toString() works in order). It now behaves more like BooleanQuery,